src/shared/components/ResourceDetails/ResourceDetails.scss
.cluster-overview__details-wrapper,
.cluster-overview__details-grid {
  display: grid;
  gap: 25px;
}

.cluster-overview__details-wrapper {
  grid-template-columns: 1fr;
  min-width: 200px;
  width: fit-content;
}

.cluster-overview__details-grid {
  grid-template-columns: 1fr;
}

.resource-details-container {
  display: grid;
  grid-template-columns: 100%;
  gap: 1rem;
}

.resource-overview__details-wrapper {
  min-width: 200px;
}

@container (min-width: 650px) {
  .cluster-overview__details-wrapper {
    grid-template-columns: max-content max-content;
  }

  .cluster-overview__details-grid {
    grid-template-columns: repeat(2, minmax(175px, min-content));
  }

  .resource-overview__details-wrapper {
    max-width: fit-content;
    min-width: 300px;
  }
}

@container (min-width: 900px) {
  .resource-details-container {
    grid-template-columns: max-content max-content;
    gap: 0;

    &.column-view {
      grid-template-columns: repeat(auto-fill, 100%);
      gap: 1rem;
    }
  }
}

